--- a/src/sass/app/_form.scss
+++ b/src/sass/app/_form.scss
@@ -34,22 +34,27 @@
   label {
     margin-bottom: 5px;
     color: $default-text;
-    font-weight: $font-normal;
+    font-weight: $font-bold;
+    text-transform: uppercase;
     font-size: 13px;
   }
 }
 
-.form-control {
+.form-control-br {
   color: $default-text;
   @include placeholderStyle($default-text, 0.7);
   border: 1px solid $input-border;
   border-radius: 5px;
   background-color: $input-background;
-  box-shadow: none;
+  
+  
   &:focus {
     box-shadow: none;
     border-color: $primary-bg;
     background: $input-background;
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   }
 }
 
