--- a/src/app/pages/selfdashboard/dashboard.html
+++ b/src/app/pages/selfdashboard/dashboard.html
@@ -1,5 +1,4 @@
 
-
 <div class="row">
     <div class="col-md-12">
         <div class="row pie-charts">
@@ -19,27 +18,31 @@
             </div>
         </div>
     </div>
-    <!-- <div class="col-lg-3 col-md-12 col-sm-12" ba-panel ba-panel-title="Acquisition">
-    </div> -->
 </div>
 
 
 <div class="row">
-    <div class="col-lg-5 col-md-12 col-sm-12" ba-panel ba-panel-title="Current Month Attendance Summery" ba-panel-class="medium-panel traffic-panel">
+    <div class="col-md-6">
         <traffic-chart></traffic-chart>
     </div>
-    <div class="col-lg-7 col-md-12 col-sm-12" ba-panel ba-panel-title="announcement" ba-panel-class="medium-panel traffic-panel">
-        <!-- <div ui-grid="LeaveTodayGridOpt" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
-        </div> -->
-       
+
+    <div class="col-md-6">
+        <div class="panel panel-medium">
+            <div class="panel-heading">
+                Attendace Summery
+            </div>
+
+            <div class="panel-body">
+            </div>
+        </div>
     </div>
-    <!-- <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Acquisition Channels" ba-panel-class="medium-panel traffic-panel">
-    </div> -->
 </div>
 
 
 <div class="row">
     <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Upcoming Team Leave List(90 Day)" ba-panel-class="medium-panel">
+
+
         <table class="table table-bordered table-condensed " ng-init="empSalaryHead.totals = {}">
             <thead>
                 <tr class="info">
@@ -140,7 +143,7 @@
     <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Upcoming Holidays" ba-panel-class="medium-panel">
         <!-- <div ui-grid="LeaveNextWeekGridOpt" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning class="joinGridCss">
         </div> -->
-        
+
 
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12" ba-panel ba-panel-title="Upcoming BirhDay" ba-panel-class="medium-panel traffic-panel">
