--- a/src/app/pages/self/attendance/daywise/daywise.html
+++ b/src/app/pages/self/attendance/daywise/daywise.html
@@ -6,7 +6,7 @@
             </div>
 
             <div class="panel-body">
-                    <div id='calendar' class="blurCalendar"></div>
+                <div id='calendar' class="blurCalendar"></div>
             </div>
         </div>
     </div>
@@ -18,7 +18,15 @@
             </div>
 
             <div class="panel-body">
-
+                <div class="channels-info">
+                    <div>
+                        <div class="channels-info-item" ng-repeat="label in doughnutData.labels" ng-init="i = $index; data = doughnutData.datasets[0]">
+                            <div class="legend-color" style="background-color: {{::data.backgroundColor[i]}}"></div>
+                            <p>{{::label}}
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
