--- a/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
+++ b/src/app/pages/self/attendance/miscellaneous/miscellaneous.html
@@ -1,1 +1,47 @@
-<h1>Mislenious</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-medium">
+            <div class="panel-heading">
+                <label dotranslate>Miscellaneous Monthly Attendance</label>
+            </div>
+
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered table-condensed " ng-init="empSalaryHead.totals = {}">
+                        <thead>
+                            <tr class="info">
+                                <td>
+                                    <label>Heads</label>
+                                </td>
+                                <td>
+                                    <label>Entitled</label>
+                                </td>
+                                <td>
+                                    <label>April</label>
+                                </td>
+                                <td>
+                                    <label>May</label>
+                                </td>
+                                <td>
+                                    <label>June</label>
+                                </td>
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="salHead in empSalaryHead">
+                                <td style="text-align: left" class="text-align "> {{salHead.SHName}}</td>
+                                <td class="text-right ">{{salHead.SASSHRate}}</td>
+                                <td class="text-right">{{salHead.April}}</td>
+                                <td class="text-right ">{{salHead.May}}</td>
+                                <td class="text-right">{{salHead.June }}</td>
+
+                            </tr>
+                        </tbody>
+                        
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>>
