--- a/src/app/pages/self/attendance/miscellaneous/applycoff.html
+++ b/src/app/pages/self/attendance/miscellaneous/applycoff.html
@@ -1,40 +1,65 @@
 <div class="modal-content">
-    <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" dotranslate>Apply C-Off</h3>
-    </div>
-    <div class="modal-body content-container">
-        <form name="leaveDetail" id="leaveDetail" novalidate>
-            <div class="row">
-                <div class="col-sm-8">
-                    <div class="col-sm-12 clear-left-padding">
-                        <div class="form-group">
-                            <label dotranslate>C-Off Date</label>
-                            <input type="text" class="form-control" ng-model="entity.DayName" name="LocationName" id="LocationName" required />
-                        </div>
-                    </div>
-
-                    <div class="col-sm-12 clear-left-padding">
-                        <div class="form-group">
-                            <label dotranslate>Comment</label>
-                            {{entity}}
-                            <textarea type="text" class="form-control" ng-model="entity.DATE" name="LocationName" id="LocationName" required />
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                </div>
-
+        <div class="modal-header bg-primary">
+            <h3 class="inline-block clear-vertical-margin" dotranslate>Apply C-Off Detail</h3>
+        </div>
+        <div class="modal-body content-container">
+            <form name="leaveDetail" id="leaveDetail" novalidate>
                 <div class="row">
-                    <div class="col-sm-12 vertical-margin">
-                        <div class="col-sm-6 pull-right text-right">
-
-                            <button type="submit" class="btn btn-success" ng-click="addLocationDetail();" dotranslate>Apply C-Off</button>
-                            <a class="btn btn-cancel" ng-click="$dismiss();">Cancel</a>
+                    <div class="col-sm-8">
+                        <div class="col-sm-12 clear-left-padding">
+                            <div class="form-group">
+                                <label dotranslate>Date</label>
+                                <input type="datetime" class="form-control" ng-model="entity.COAttnDate" name="AttendanceDate" id="AttendanceDate" required />
+                            </div>
+                        </div>
+    
+                        <div class="col-sm-12 clear-left-padding">
+                            <div class="form-group">
+                                <label dotranslate>In Time</label>
+                                <div class="input-group" moment-picker="timepicker" format="hh:mm A" max-date="col.maxDate" min-date="col.minDate">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="false" class="form-control" placeholder="Pick any time"
+                                        ng-model="entity.COTimeIn" ng-model-options="{ updateOn: 'blur' }">
+                                </div>
+                            </div>
+                        </div>
+    
+                        <div class="col-sm-12 clear-left-padding">
+                            <div class="form-group">
+                                <label dotranslate>Out Time</label>
+                                <div class="input-group" moment-picker="timepicker" format="hh:mm A" max-date="col.maxDate" min-date="col.minDate">
+                                    <span class="input-group-addon">
+                                        <i class="fa fa-clock-o"></i>
+                                    </span>
+                                    <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="false" class="form-control" placeholder="Pick any time"
+                                        ng-model="entity.COTimeOut" ng-model-options="{ updateOn: 'blur' }">
+                                </div>
+                            </div>
+                        </div>
+    
+    
+                        <div class="col-sm-12 clear-left-padding">
+                            <div class="form-group">
+                                <label dotranslate>Comment</label>
+                                <textarea type="textarea" class="form-control" ng-model="entity.COReson" name="ODReason" id="ODReason" required />
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="col-sm-4">
+                    </div>
+    
+                    <div class="row">
+                        <div class="col-sm-12 vertical-margin">
+                            <div class="col-sm-6 pull-right text-right">
+                                <button type="submit" class="btn btn-success" ng-click="addAttendance();" dotranslate>Apply Attendance</button>
+                                <a class="btn btn-cancel" ng-click="$dismiss();">Cancel</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
-</div>
