--- a/src/app/pages/self/attendance/miscellaneous/applyod.html
+++ b/src/app/pages/self/attendance/miscellaneous/applyod.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header bg-primary">
-        <h3 class="inline-block clear-vertical-margin" dotranslate>Apply Attendance</h3>
+        <h3 class="inline-block clear-vertical-margin" dotranslate>Apply Out-Duty</h3>
     </div>
     <div class="modal-body content-container">
         <form name="leaveDetail" id="leaveDetail" novalidate>
@@ -8,7 +8,7 @@
                 <div class="col-sm-8">
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
-                            <label dotranslate>Attendace Date</label>
+                            <label dotranslate>Date</label>
                             <input type="datetime" class="form-control" ng-model="entity.FDAFromDate" name="AttendanceDate" id="AttendanceDate" required
                             />
                         </div>
@@ -17,12 +17,11 @@
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
                             <label dotranslate>In Time</label>
-                            <div class="input-group" moment-picker="timepicker" format="hh:mm A" max-date="col.maxDate" min-date="col.minDate">
+                            <div class="input-group" moment-picker="entity.FADInTime" format="hh:mm A">
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="false" class="form-control" placeholder="Pick any time"
-                                    ng-model="entity.FADInTime" ng-model-options="{ updateOn: 'blur' }">
+                                <input class="form-control" placeholder="Pick any time" ng-model="entity.FADInTime" ng-model-options="{ updateOn: 'blur' }">
                             </div>
                         </div>
                     </div>
@@ -30,16 +29,14 @@
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
                             <label dotranslate>Out Time</label>
-                            <div class="input-group" moment-picker="timepicker" format="hh:mm A" max-date="col.maxDate" min-date="col.minDate">
+                            <div class="input-group" moment-picker="entity.FDAOutTime" format="hh:mm A">
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="false" class="form-control" placeholder="Pick any time"
-                                    ng-model="entity.FDAOutTime" ng-model-options="{ updateOn: 'blur' }">
+                                <input class="form-control" placeholder="Pick any time" ng-model="entity.FDAOutTime" ng-model-options="{ updateOn: 'blur' }">
                             </div>
                         </div>
                     </div>
-
 
                     <div class="col-sm-12 clear-left-padding">
                         <div class="form-group">
@@ -55,7 +52,7 @@
                 <div class="row">
                     <div class="col-sm-12 vertical-margin">
                         <div class="col-sm-6 pull-right text-right">
-                            <button type="submit" class="btn btn-success" ng-click="addAttendance();" dotranslate>Apply Attendance</button>
+                            <button type="submit" class="btn btn-success" ng-click="addOD();" dotranslate>Apply Out-Duty</button>
                             <a class="btn btn-cancel" ng-click="$dismiss();">Cancel</a>
                         </div>
                     </div>
